--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -25,11 +25,16 @@ jobs:
         pip install pdm
         sudo apt-get install -y flatpak flatpak-builder
 
+    - name: Install Flatpak SDK
+      run: |
+        flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+        flatpak install -y flathub org.kde.Sdk/x86_64/6.3
+          
     - name: Compile
       run: make compile
 
     - name: Build Flatpak
-      run: make flatpak-build
+      run: make flatpak-build --verbose
 
 #    - name: Upload Flatpak bundle
 #      uses: actions/upload-artifact@v2
