--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -1,10 +1,10 @@
-name: Build and Test
+name: Build Flatpak
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  workflow_run:
+    workflows: ["Build and Push Docker Image"]
+    types:
+      - completed
 
 jobs:
   build:
@@ -14,30 +14,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
+    - name: Set up Docker container
       run: |
-        python -m pip install --upgrade pip
-        pip install pdm
-        sudo apt-get install -y flatpak flatpak-builder
-
-    - name: Install Flatpak SDK
-      run: |
-        flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-        flatpak install -y flathub org.kde.Sdk/x86_64/6.3
-          
-    - name: Compile
-      run: make compile
-
-    - name: Build Flatpak
-      run: make flatpak-build --verbose
-
-#    - name: Upload Flatpak bundle
-#      uses: actions/upload-artifact@v2
-#      with:
-#        name: flatpak-bundle
-#        path: path/to/your/flatpak/bundle
+        docker pull sunnflare/appi:latest
+        docker run -v ${{ github.workspace }}:/app -w /app sunnflare/appi:latest /bin/bash -c "make compile && make flatpak-build"
