--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,10 +1,10 @@
 name: Build and Push Docker Image
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   build:
