disable image build

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -5,6 +5,10 @@ name: Build and Push Docker Image
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
+on:
+  push:
+    tags:
+      - 'shananigans'
 
 jobs:
   build:
