try: fix pyside deps

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,14 +1,14 @@
 name: Build and Push Docker Image
 
-#on:
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
 on:
   push:
-    tags:
-      - 'shananigans'
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+#on:
+#  push:
+#    tags:
+#      - 'shananigans'
 
 jobs:
   build:
